--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "react-native-key-command": "^1.0.1",
     "react-native-localize": "^2.2.6",
     "react-native-modal": "^13.0.0",
-    "react-native-onyx": "1.0.43",
+    "react-native-onyx": "git+https://github.com/fabioh8010/react-native-onyx#77b444385044ea4a0dfa18a712508903dafb6085",
     "react-native-pdf": "^6.6.2",
     "react-native-performance": "^4.0.0",
     "react-native-permissions": "^3.0.1",
